# m365-admin-tool

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  tenants.example.json
.github/workflows/: ci.yml
docs/: architecture.md  permissions.md  playbook.md
src/m365_admin_tool/: auth.py  cli.py  config.py  containment.py  diagnosis.py  doctor.py  exchange_admin.py  graph.py  identity.py  investigation.py  outbound.py  timeline.py
tests/: test_auth.py  test_cli.py  test_diagnosis.py  test_doctor.py  test_investigation.py  test_outbound.py
