[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365-admin-tool"
version = "0.1.0"
description = "Terminal-first Microsoft 365 and Entra investigation CLI for compromised-user triage."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dustin King" }]
keywords = [
  "microsoft-365",
  "entra",
  "azure-ad",
  "incident-response",
  "security",
  "compromise",
  "bec",
  "graph-api",
  "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "httpx>=0.28.1",
  "msal>=1.32.0",
]

[project.urls]
Homepage = "https://github.com/Gluthoric/m365-admin-tool"
Repository = "https://github.com/Gluthoric/m365-admin-tool"
Issues = "https://github.com/Gluthoric/m365-admin-tool/issues"
Documentation = "https://github.com/Gluthoric/m365-admin-tool#readme"

[project.scripts]
m365-admin = "m365_admin_tool.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "RUF"]

[tool.hatch.build.targets.wheel]
packages = ["src/m365_admin_tool"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
